.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

Changes in Runtime Behavior:

  * util-collection: LruMap is now backed by jdk LinkedHashMap instead of apache
    collections LRUMap. ``RB_ID=833515``

  * util-core: `com.twitter.util.NonFatal` is now implemented by Scala's
    `scala.util.control.NonFatal`. This changes behavior such that
    `java.lang.StackOverflowError` is considered fatal and
    `java.lang.NoSuchMethodException` is considered non-fatal.
    ``RB_ID=835671``

New Features:

  * util-core: Add `c.t.concurrent.Scheduler.blockingTimeNanos` which tracks time spent doing
    blocking operations. ``RB_ID=828289``

  * util-core: Reduced allocations by 40% and latency by 18% of satisfying `Promises`.
    ``RB_ID=832816``

  * util-core: `c.t.util.NoStacktrace` is removed. Use `scala.util.control.NoStackTrace` instead.
    ``RB_ID=833188``

  * util-core: Add `Future.joinWith` that also accepts a function `(A, B) => C` for mapping
    a joined result. ``RB_ID=838169``

  * util-app: `com.twitter.finagle.util.LoadService` has been moved to
    `c.t.app.LoadService` and can now be used without needing a finagle-core
    dependency. ``RB_ID=829897``

  * util-cache: Adds support for Caffeine-style caches. ``RB_ID=833848``

API Changes:

  * util-core: `c.t.u.Bijection` is removed. use `c.t.bijection.Bijection`
    (https://github.com/twitter/bijection) instead. ``RB_ID=834383``

  * Builds are now only for Java 8 and Scala 2.11. See the
    `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
    for details. ``RB_ID=828898``

  * util-core: Deprecated method `Future.get()` has been removed because it made it
    too easy to hide blocking code. Replaced usage with the more explicit